// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Authorizer Should able to access actionParams 1`] = `
Array [
  Array [
    ParameterMetadata {
      "meta": Array [
        Object {
          "decorators": Array [],
          "fields": Object {},
          "index": 0,
          "kind": "Parameter",
          "name": "id",
          "owner": Array [
            AnimalController,
          ],
          "type": Number,
          "typeClassification": "Primitive",
        },
      ],
      "parameters": Array [
        1234,
      ],
    },
  ],
]
`;

exports[`Custom Authorizer Should able to access current metadata on constructor 1`] = `
Array [
  Array [
    Object {
      "ctor": Object {
        "kind": "Constructor",
        "name": "constructor",
        "parameters": Array [],
      },
      "decorators": Array [
        Object {
          "authorize": customAuthorizer,
          "location": "Class",
          "tag": "Custom",
          "type": "plumier-meta:authorize",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Class",
      "methods": Array [
        Object {
          "decorators": Array [
            Object {
              "method": "get",
              "name": "Route",
              "url": undefined,
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": true,
                "inherit": true,
              },
            },
          ],
          "kind": "Method",
          "name": "get",
          "owner": Array [
            AnimalController,
          ],
          "parameters": Array [
            Object {
              "decorators": Array [],
              "fields": Object {},
              "index": 0,
              "kind": "Parameter",
              "name": "id",
              "owner": Array [
                AnimalController,
              ],
              "type": Number,
              "typeClassification": "Primitive",
            },
          ],
          "returnType": undefined,
          "typeClassification": undefined,
        },
      ],
      "name": "AnimalController",
      "owner": Array [
        Object,
        AnimalController,
      ],
      "properties": Array [],
      "super": Object,
      "type": AnimalController,
      "typeClassification": "Class",
    },
  ],
]
`;

exports[`Custom Authorizer Should able to access current metadata on method 1`] = `
Array [
  Array [
    Object {
      "decorators": Array [
        Object {
          "authorize": customAuthorizer,
          "location": "Method",
          "tag": "Custom",
          "type": "plumier-meta:authorize",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
        Object {
          "method": "get",
          "name": "Route",
          "url": undefined,
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "kind": "Method",
      "name": "get",
      "owner": Array [
        AnimalController,
      ],
      "parameters": Array [
        Object {
          "decorators": Array [],
          "fields": Object {},
          "index": 0,
          "kind": "Parameter",
          "name": "id",
          "owner": Array [
            AnimalController,
          ],
          "type": Number,
          "typeClassification": "Primitive",
        },
      ],
      "parent": AnimalController,
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
]
`;

exports[`Custom Authorizer Should able to access current metadata on parameter 1`] = `
Array [
  Array [
    Object {
      "decorators": Array [
        Object {
          "authorize": customAuthorizer,
          "location": "Parameter",
          "tag": "Custom",
          "type": "plumier-meta:authorize",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "fields": Object {},
      "index": 0,
      "kind": "Parameter",
      "name": "id",
      "owner": Array [
        AnimalController,
      ],
      "parent": AnimalController,
      "type": Number,
      "typeClassification": "Primitive",
    },
  ],
]
`;

exports[`Custom Authorizer Should able to access current metadata on parameter property 1`] = `
Array [
  Array [
    Object {
      "decorators": Array [
        Object {
          "authorize": customAuthorizer,
          "location": "Parameter",
          "tag": "Custom",
          "type": "plumier-meta:authorize",
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": true,
            "inherit": true,
          },
        },
      ],
      "get": undefined,
      "index": 0,
      "isParameter": true,
      "kind": "Property",
      "name": "name",
      "owner": Array [
        Animal,
      ],
      "parent": Animal,
      "set": undefined,
      "type": String,
      "typeClassification": "Primitive",
    },
  ],
]
`;

exports[`Custom Authorizer Should able to access metadata from custom authorizer 1`] = `
Array [
  Array [
    MetadataImpl {
      "access": undefined,
      "action": Object {
        "decorators": Array [
          Object {
            "authorize": customAuthorizer,
            "location": "Method",
            "tag": "Custom",
            "type": "plumier-meta:authorize",
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
          Object {
            "method": "get",
            "name": "Route",
            "url": undefined,
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
        ],
        "kind": "Method",
        "name": "get",
        "owner": Array [
          AnimalController,
        ],
        "parameters": Array [
          Object {
            "decorators": Array [],
            "fields": Object {},
            "index": 0,
            "kind": "Parameter",
            "name": "id",
            "owner": Array [
              AnimalController,
            ],
            "type": Number,
            "typeClassification": "Primitive",
          },
        ],
        "returnType": undefined,
        "typeClassification": undefined,
      },
      "actionParams": ParameterMetadata {
        "meta": Array [
          Object {
            "decorators": Array [],
            "fields": Object {},
            "index": 0,
            "kind": "Parameter",
            "name": "id",
            "owner": Array [
              AnimalController,
            ],
            "type": Number,
            "typeClassification": "Primitive",
          },
        ],
        "parameters": Array [
          1234,
        ],
      },
      "controller": Object {
        "ctor": Object {
          "kind": "Constructor",
          "name": "constructor",
          "parameters": Array [],
        },
        "decorators": Array [],
        "kind": "Class",
        "methods": Array [
          Object {
            "decorators": Array [
              Object {
                "authorize": customAuthorizer,
                "location": "Method",
                "tag": "Custom",
                "type": "plumier-meta:authorize",
                Symbol(tinspector:decoratorOption): Object {
                  "allowMultiple": true,
                  "inherit": true,
                },
              },
              Object {
                "method": "get",
                "name": "Route",
                "url": undefined,
                Symbol(tinspector:decoratorOption): Object {
                  "allowMultiple": true,
                  "inherit": true,
                },
              },
            ],
            "kind": "Method",
            "name": "get",
            "owner": Array [
              AnimalController,
            ],
            "parameters": Array [
              Object {
                "decorators": Array [],
                "fields": Object {},
                "index": 0,
                "kind": "Parameter",
                "name": "id",
                "owner": Array [
                  AnimalController,
                ],
                "type": Number,
                "typeClassification": "Primitive",
              },
            ],
            "returnType": undefined,
            "typeClassification": undefined,
          },
        ],
        "name": "AnimalController",
        "owner": Array [
          Object,
          AnimalController,
        ],
        "properties": Array [],
        "super": Object,
        "type": AnimalController,
        "typeClassification": "Class",
      },
      "current": Object {
        "decorators": Array [
          Object {
            "authorize": customAuthorizer,
            "location": "Method",
            "tag": "Custom",
            "type": "plumier-meta:authorize",
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
          Object {
            "method": "get",
            "name": "Route",
            "url": undefined,
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": true,
              "inherit": true,
            },
          },
        ],
        "kind": "Method",
        "name": "get",
        "owner": Array [
          AnimalController,
        ],
        "parameters": Array [
          Object {
            "decorators": Array [],
            "fields": Object {},
            "index": 0,
            "kind": "Parameter",
            "name": "id",
            "owner": Array [
              AnimalController,
            ],
            "type": Number,
            "typeClassification": "Primitive",
          },
        ],
        "parent": AnimalController,
        "returnType": undefined,
        "typeClassification": undefined,
      },
    },
  ],
]
`;
